포트폴리오-2

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <div class="header">
         <div class="center">
             <div class="logo">로고</div>
+            <div class="test">실험용 멘트</div>
+            <div>실험용 멘트</div>
+            <div>실험용 멘트</div>
             <div class="gnb">
                 <ul>
                     <li>
