포트폴리오-4

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <div class="center">
         <div class="logo">로고</div>
         <div class="test">실험용 멘트</div>
-        <div>실험용 멘트</div>
-        <div><a href="sub.html">실험용 멘트</a></div>
+        <div><a href="sub.html">실험의 멘트</a></div>
         <div class="gnb">
           <ul>
             <li>
